# volume_renderer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindEmbree.cmake
scenes/ghost/: ghost.xml
scenes/sponza/: sponza.xml
scenes/veach-bidir/: scene.xml
scenes/volpath_test/: ghost.xml  hetvol_colored.xml  room.xml  thanks.xml  vol_cbox.xml  volpath_test5.xml
scenes/volpath_test/room_meshes/: room.mtl
src/: main.cpp
src/core/: parallel.cpp  parallel.h  progress_reporter.h  timer.h
src/core/math/: frame.h  matrix.h  pcg.h  spectrum.h  table_dist.cpp  table_dist.h  transform.cpp  transform.h  vector.h
src/core/parsers/: load_serialized.cpp  load_serialized.h  parse_obj.cpp  parse_obj.h  parse_ply.cpp  parse_ply.h  parse_scene.cpp  parse_scene.h  shape_utils.h
src/filters/: filter.cpp  filter.h
src/geometry/: intersection.cpp  intersection.h  point_and_normal.h  ray.h  shape.cpp  shape.h
src/lights/: light.cpp  light.h
src/materials/: disney_bsdf.inl  disney_clearcoat.inl  disney_diffuse.inl  disney_glass.inl  disney_metal.inl  disney_sheen.inl  material.cpp  material.h  microfacet.h  roughdielectric.inl  roughplastic.inl
src/media/: heterogeneous.inl  medium.cpp  medium.h  volume.cpp  volume.h
src/phase_functions/: henyeygreenstein.inl  phase_function.cpp  phase_function.h
src/scene/: camera.cpp  camera.h  image.cpp  image.h  mipmap.h  render.cpp  render.h  scene.cpp  scene.h  texture.h
src/solvers/: path_tracer.h  volumetric.h
src/tests/: filter.cpp  frame.cpp  image.cpp  intersection.cpp  materials.cpp  matrix.cpp  mipmap.cpp
